<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="rtl"
                android:background="@color/grey_10">

    <View
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/colorPrimary" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

        <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_mlarge"
                android:layout_marginTop="@dimen/spacing_large"
                android:src="@drawable/hghlogo" />

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                android:visibility="visible"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/spacing_xlarge"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="@string/login_login"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/green_500"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_username"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorText"
                        android:textStyle="bold"
                        android:theme="@style/EditText.Grey" />

                <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_password"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorText"
                        android:textStyle="bold"
                        android:theme="@style/EditText.Grey" />

                <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                            android:layoutDirection="ltr"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal"
                            android:weightSum="1.5"
                >

                    <RadioButton
                            android:id="@+id/radioStudent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/login_student"/>
                    <RadioButton
                            android:id="@+id/radioProfessor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/login_professor"/>
                    <RadioButton
                            android:id="@+id/radioAdmin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/login_admin"
                            android:checked="true"/>
                </RadioGroup>

                <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="@string/login_login"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

    </LinearLayout>

</RelativeLayout>